# PII-project

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  dockerfile  prometheus.yml  pyproject.toml  requirements.txt  stress_test.py
app/: config.py  main.py  schemas.py  service.py  verification.py
app/prompts/: __init__.py  few_shot_examples.py  verification_prompts.py
tests/unit/: test_service.py
