[project]
name = "pii-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "spacy>=3.8.11",
    "uvicorn>=0.40.0",
]
